# avatar-anim

./: Cargo.toml  README.md
examples/: animctl.rs
src/: io.rs  lib.rs
tests/: core.rs
